# ui-module

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STEERING.md  mkdocs.yml  plug-n-play-instructions.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  DISCUSSIONS_START_HERE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
config/: settings.yaml
config/views/: dashboard.yaml  example-dashboard.yaml  login.yaml
docs/: architecture.md  configuration.md  getting-started.md  index.md  mcpui-integration.md  plug-n-play.md  prompts.md  resources.md  steering.md  tools-reference.md
src/ui_module/: cli.py  prompts.py  resources.py  server.py
src/ui_module/engine/: __init__.py  config.py  envelope.py  models.py  push_channel.py  registry.py  renderer.py  router.py  runtime.py  view_manager.py
src/ui_module/engine/adapters/: __init__.py  base.py  json_adapter.py  mcpui_adapter.py
src/ui_module/engine/store/: memory_store.py  view_store.py
tests/: conftest.py  test_config.py  test_engine.py  test_envelope.py  test_mcpui_adapter.py  test_prompts.py  test_push_channel.py  test_registry.py  test_resources.py  test_router.py  test_runtime.py  test_runtime_manual.py  test_view_manager.py
tools/: seed_repo_features.py
